# NYCU-ML-2023-Spring

./: .gitignore  README.md
hw1/: CMakeLists.txt  main.cpp
hw1/include/algebra/: matrix.hpp
hw1/src/: CMakeLists.txt  algebra.cpp  matrix.cpp
hw2/: main.cpp
hw2/Q1/: CMakeLists.txt  main.cpp
hw2/Q1/include/algebra/: algebra.hpp
hw2/Q1/include/common/: cast.hpp
hw2/Q1/src/algebra/: CMakeLists.txt  matrix.cpp
hw2/Q2/: CMakeLists.txt  main.cpp
hw2/include/algebra/: matrix.hpp
hw2/src/: CMakeLists.txt
hw2/src/algebra/: algebra.cpp  matrix.cpp
hw3/Q1/: CMakeLists.txt  main.cpp
hw3/Q1/include/algebra/: algebra.hpp  matrix.hpp
hw3/Q1/include/generator/: generator.hpp
hw3/Q1/src/: CMakeLists.txt
hw3/Q1/src/algebra/: CMakeLists.txt  algebra.cpp  matrix.cpp
hw3/Q1/src/generator/: CMakeLists.txt  generator.cpp
hw3/Q2/: CMakeLists.txt  main.cpp
hw3/Q2/include/algebra/: matrix.hpp
hw3/Q2/libs/: CMakeLists.txt
hw3/Q3/: CMakeLists.txt  main.cpp
hw3/Q3/include/algebra/: matrix.hpp
hw3/Q3/include/generator/: generator.h
hw4/Q1/: CMakeLists.txt  main.cpp
hw4/Q1/include/algebra/: algebra.h
hw4/Q2/: CMakeLists.txt  main copy.cpp  main.cpp
hw5/: Report.md
hw5/Q1/: CMakeLists.txt  main.cpp
hw5/Q2/: CMakeLists.txt  main.cpp
hw6/: CMakeLists.txt  Report.md  kernel_kmeans.cpp  spectral_clustering.cpp
hw6/include/mlhw6/: cluster.h  kernel.hpp
hw6/include/mlhw6/cluster/: kmeans.h  spectral.h
hw6/src/: CMakeLists.txt
hw6/src/cluster/: CMakeLists.txt  kmeans.cpp  spectral.cpp
hw7/: Report.md
hw7/Q1/: .gitignore  main.py  requirements.txt  sample_parser.m  test.py  train.py  utils.py
hw7/Q2/: .gitignore  tsne.py
